--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -342,6 +342,7 @@
     <None Include="AppDateFolder\ModelFolder\DesctopHiteModel.edmx.diagram">
       <DependentUpon>DesctopHiteModel.edmx</DependentUpon>
     </None>
+    <Resource Include="ContentFolder\FontFolder\Comfortaa-Bold.ttf" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
