--- a/DesctopHITE/packages.config
+++ b/DesctopHITE/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
 </packages>
