--- a/DesctopHITE/packages.config
+++ b/DesctopHITE/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net48" />
   <package id="EntityFramework.ru" version="6.2.0" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.1264.42" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net48" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net48" />
 </packages>
