Страница с поиском обновления (готово)

--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -34,6 +34,15 @@
       <setting name="MeaningRemember" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="SNMUpdateScan" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DateTimeUpdateScan" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="ResultUpdateScan" serializeAs="String">
+        <value />
+      </setting>
     </DesctopHITE.Properties.Settings>
   </userSettings>
 </configuration>
