--- a/DesctopHITE/App.config
+++ b/DesctopHITE/App.config
@@ -43,6 +43,15 @@
       <setting name="ResultUpdateScan" serializeAs="String">
         <value />
       </setting>
+      <setting name="SNMScan" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DateTimeScan" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="DurationScan" serializeAs="String">
+        <value />
+      </setting>
     </DesctopHITE.Properties.Settings>
   </userSettings>
 </configuration>
