Остановите пожалуйста меня, я закалебался чистить и менять код, пото му что, я так просто хочу(((

--- a/DesctopHITE/DesctopHITE.csproj
+++ b/DesctopHITE/DesctopHITE.csproj
@@ -231,6 +231,7 @@
     <Compile Include="AppDateFolder\ClassFolder\CaptchaClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\FrameNavigationClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\HolidayClass.cs" />
+    <Compile Include="AppDateFolder\ClassFolder\MessageBoxClass.cs" />
     <Compile Include="AppDateFolder\ClassFolder\TimeClass.cs" />
     <Compile Include="AppDateFolder\ModelFolder\DesctopHiteModel.Context.cs">
       <AutoGen>True</AutoGen>
